[gd_scene load_steps=5 format=3 uid="uid://claf3vyxr13cs"]

[ext_resource type="Texture2D" uid="uid://c87psqayoblnf" path="res://graphics/player.png" id="1_4b4t2"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_8hk83"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v1soc"]
size = Vector2(18, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iy8ua"]
size = Vector2(16, 7.25)

[node name="Player" type="RigidBody2D"]
collision_layer = 2
collision_mask = 9
mass = 10.0
gravity_scale = 0.8
lock_rotation = true
script = ExtResource("1_8hk83")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_4b4t2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_v1soc")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 21)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 6.375)
shape = SubResource("RectangleShape2D_iy8ua")

[node name="LeftHand" type="Marker2D" parent="."]
position = Vector2(-10, 14)

[node name="RightHand" type="Marker2D" parent="."]
position = Vector2(10, 14)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
